@@ -1,7 +1,8 @@
 2020-XX-YY v. 2.1.0
 ---------------------
 - Fixed a crash when a search is performed and select all is pressed
-- Hide menu dnfdragora-update if no updates present (configurable)
+- Hide menu dnfdragora-update if no updates present (configurable default False since it
+  does not work in every DEs)
 - Fixed dnfdragora view when all_updates is True into settings (system configuration file)
 - Fixed dnfdragora view when --update-only is passed as option
 - dnfdragora-update: hide menu when running dnfdragora 
